# renderer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
assets/: bricks_diffuse.tga  bricks_nm.tga  readme.md
src/: 3d_model.cpp  DrawTools.cpp  DrawTools.hpp  Mat4.cpp  Mat4.hpp  Math.cpp  Math.hpp  MathTests.cpp  MathTests.hpp  ModelFace.cpp  ModelFace.h  ObjFormatModel.cpp  ObjFormatModel.hpp  Point.cpp  Point.hpp  Shader.cpp  Shader.hpp  TextureSampler.cpp  TextureSampler.hpp  Transform.cpp  Transform.hpp  Utilities.hpp  Vec2.cpp  Vec2.hpp  Vec2i.cpp  Vec2i.hpp  Vec3.cpp  Vec3.hpp  Vec3f.cpp  Vec3f.hpp  Vec3i.cpp  Vec3i.hpp  Vec4.cpp  Vec4.hpp  draw_tools.cpp  draw_tools.h  draw_tools.hpp  forwards.hpp  geometric_models.cpp  line_model.cpp
src/shaders/: IShader.hpp  MonochromeShader.cpp  MonochromeShader.hpp  NormalMapShader.cpp  NormalMapShader.hpp  PhongReflectionShader.cpp  PhongReflectionShader.hpp  SimpleLightShader.cpp  SimpleLightShader.hpp  ToonShader.cpp  ToonShader.hpp
